--- a/etc/changelog.txt
+++ b/etc/changelog.txt
@@ -1,2 +1,5 @@
+2.0.1.0 - June 9 2009
+-Added closeWindowWithoutPrompting to MossDialog and StandardWindow interface
+
 2.0.0.0 - May 27 2009
 -First version after splitting Moss to a modular architecture. 
