--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+2.1.0.0 - September 6 2009
+-Renamed packages to ca.digitalcave
+
 2.0.1.0 - June 9 2009
 -Added closeWindowWithoutPrompting to MossDialog and StandardWindow interface
 
