--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+2.1.0.2 - July 11 2011
+-Fixed copy / paste bug caused by double to long rounding error
+
 2.1.0.1 - November 3 2010
 -Changed Windows LnF from WINLAF (which hasn't been updated in some time) to the default Windows LnF.  This should hopefully fix problems with black menus in Vista.
 
