--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+2.1.0.4 - January 25 2012
+-Added support for pasting values from other locales into MossDecimalFeild
+
 2.1.0.3 - October 19 2011
 -Fixed bug where you can't type in the description pulldown anywhere except the end of the line.  (Thanks to Toomas Remmelg for this patch)
 
